--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "aws/aws-sdk-php-laravel": "^3.1",
         "barryvdh/laravel-dompdf": "0.8.*",
         "fideloper/proxy": "~3.3",
         "guzzlehttp/guzzle": "^6.3",
