--- a/.env
+++ b/.env
@@ -22,21 +22,21 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=
-MAIL_PORT=
-MAIL_USERNAME=
-MAIL_PASSWORD=
-MAIL_ENCRYPTION=null
-MAIL_FROM=
-
 MAIL_DRIVER_=smtp
-MAIL_HOST_=mail.subitus.com
-MAIL_PORT_=26
-MAIL_USERNAME_=ricardo.allende@subitus.com
-MAIL_PASSWORD_=Subitus2018!
+MAIL_HOST_=
+MAIL_PORT_=
+MAIL_USERNAME_=
+MAIL_PASSWORD_=
 MAIL_ENCRYPTION_=null
-MAIL_FROM_=ricardo.allende@subitus.com
+MAIL_FROM_=
+
+MAIL_DRIVER=smtp
+MAIL_HOST=mail.subitus.com
+MAIL_PORT=26
+MAIL_USERNAME=ricardo.allende@subitus.com
+MAIL_PASSWORD=Subitus2018!
+MAIL_ENCRYPTION=null
+MAIL_FROM=ricardo.allende@subitus.com
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
